--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <junit-jupiter-api.version>5.4.0</junit-jupiter-api.version>
+    <junit-jupiter-engine.version>5.4.0</junit-jupiter-engine.version>
     <mysql-connector-java.version>8.0.15</mysql-connector-java.version>
     <logback-classic.version>1.2.3</logback-classic.version>
 	<logback-core.version>1.2.3</logback-core.version>
@@ -21,35 +22,40 @@
   
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
         <version>${mysql-connector-java.version}</version>
     </dependency>
+    
     <dependency>
+	  <groupId>org.junit.jupiter</groupId>
+	  <artifactId>junit-jupiter-engine</artifactId>
+	  <version>${junit-jupiter-engine.version}</version>
+	</dependency>
+	
+	<dependency>
 	  <groupId>org.junit.jupiter</groupId>
 	  <artifactId>junit-jupiter-api</artifactId>
 	  <version>${junit-jupiter-api.version}</version>
 	</dependency>
+	
 	<dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>${logback-classic.version}</version>
     </dependency>
+    
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-core</artifactId>
       <version>${logback-core.version}</version>
     </dependency>
+    
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>${slf4j-api.version}</version>
     </dependency>
+    
   </dependencies>
 </project>
