--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <logback-classic.version>1.2.3</logback-classic.version>
 	<logback-core.version>1.2.3</logback-core.version>
 	<slf4j-api.version>1.7.26</slf4j-api.version>
+	<mockito-all.version>1.8.4</mockito-all.version>
   </properties>
   
   <dependencies>
@@ -31,12 +32,14 @@
 	  <groupId>org.junit.jupiter</groupId>
 	  <artifactId>junit-jupiter-engine</artifactId>
 	  <version>${junit-jupiter-engine.version}</version>
+	  <scope>test</scope>
 	</dependency>
 	
 	<dependency>
 	  <groupId>org.junit.jupiter</groupId>
 	  <artifactId>junit-jupiter-api</artifactId>
 	  <version>${junit-jupiter-api.version}</version>
+	  <scope>test</scope>
 	</dependency>
 	
 	<dependency>
@@ -56,6 +59,13 @@
       <artifactId>slf4j-api</artifactId>
       <version>${slf4j-api.version}</version>
     </dependency>
+    
+<!--     <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>${mockito-all.version}</version>
+      <scope>test</scope>
+    </dependency> -->
     
   </dependencies>
 </project>
