--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
 	<logback-core.version>1.2.3</logback-core.version>
 	<slf4j-api.version>1.7.26</slf4j-api.version>
 	<mockito-all.version>1.8.4</mockito-all.version>
+	<maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
+	<maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
   </properties>
   
   <dependencies>
@@ -66,6 +68,34 @@
       <version>${mockito-all.version}</version>
       <scope>test</scope>
     </dependency> -->
-    
+  
   </dependencies>
+  
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven-surefire-plugin.version}</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+  
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>${maven-checkstyle-plugin.version}</version>
+        <configuration>
+          <configLocation>src/main/resources/checkstyle/checkstyle.xml</configLocation>
+          <suppressionsLocation>src/main/resources/checkstyle/suppressions.xml</suppressionsLocation>
+          <!-- <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression> -->
+        </configuration>
+      </plugin>
+    </plugins>
+  </reporting>
+  
 </project>
