Feature : List Computer (without pagination)

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -18,5 +18,9 @@
 	    <servlet-name>Dashboard</servlet-name>
 	    <url-pattern>/dashboard</url-pattern>
 	</servlet-mapping>
+	
+	<welcome-file-list>
+	    <welcome-file>dashboard</welcome-file>
+	</welcome-file-list>
 
 </web-app>
