--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -29,6 +29,16 @@
 	    <url-pattern>/addComputer</url-pattern>
 	</servlet-mapping>
 	
+	<servlet>
+		<servlet-name>EditComputer</servlet-name>
+		<servlet-class>com.excilys.cdb.servlets.EditComputerServlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+	    <servlet-name>EditComputer</servlet-name>
+	    <url-pattern>/editComputer</url-pattern>
+	</servlet-mapping>
+	
 	<welcome-file-list>
 	    <welcome-file>dashboard</welcome-file>
 	</welcome-file-list>
