--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -11,7 +11,7 @@
     
     <servlet>
 		<servlet-name>Dashboard</servlet-name>
-		<servlet-class>com.excilys.cdb.servlets.DashboardServlet</servlet-class>
+		<servlet-class>com.excilys.cdb.servlet.DashboardServlet</servlet-class>
 	</servlet>
 	
 	<servlet-mapping>
@@ -21,7 +21,7 @@
 	
 	<servlet>
 		<servlet-name>AddComputer</servlet-name>
-		<servlet-class>com.excilys.cdb.servlets.AddComputerServlet</servlet-class>
+		<servlet-class>com.excilys.cdb.servlet.AddComputerServlet</servlet-class>
 	</servlet>
 	
 	<servlet-mapping>
@@ -31,7 +31,7 @@
 	
 	<servlet>
 		<servlet-name>EditComputer</servlet-name>
-		<servlet-class>com.excilys.cdb.servlets.EditComputerServlet</servlet-class>
+		<servlet-class>com.excilys.cdb.servlet.EditComputerServlet</servlet-class>
 	</servlet>
 	
 	<servlet-mapping>
@@ -41,12 +41,22 @@
 	
 	<servlet>
 		<servlet-name>Error404</servlet-name>
-		<servlet-class>com.excilys.cdb.servlets.Error404Servlet</servlet-class>
+		<servlet-class>com.excilys.cdb.servlet.Error404Servlet</servlet-class>
 	</servlet>
 	
 	<servlet-mapping>
 	    <servlet-name>Error404</servlet-name>
 	    <url-pattern>/404</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>Error500</servlet-name>
+		<servlet-class>com.excilys.cdb.servlet.Error500Servlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+	    <servlet-name>Error500</servlet-name>
+	    <url-pattern>/500</url-pattern>
 	</servlet-mapping>
 	
 	<welcome-file-list>
@@ -57,6 +67,12 @@
 	    <!-- Missing resource -->
 	    <error-code>404</error-code>
 	    <location>/404</location>
+	</error-page>
+	
+	<error-page>
+	    <!-- Uncaught exception -->
+	    <error-code>500</error-code>
+	    <location>/500</location>
 	</error-page>
 
 </web-app>
