--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,10 @@
 	<mockito-all.version>1.8.4</mockito-all.version>
 	<maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
 	<maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
+	<javax.servlet-api.version>3.0.1</javax.servlet-api.version>
+	<jstl.version>1.2</jstl.version>
+	<taglibs.version>1.1.2</taglibs.version>
+	<HikariCP.version>2.7.8</HikariCP.version>
   </properties>
   
   <dependencies>
@@ -51,22 +55,30 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
-      <version>3.0.1</version>
+      <version>${javax.servlet-api.version}</version>
       <scope>provided</scope>
     </dependency>
     
     <dependency>
       <groupId>jstl</groupId>
   	  <artifactId>jstl</artifactId>
-      <version>1.2</version>
+      <version>${jstl.version}</version>
       <scope>compile</scope>
     </dependency>
+    
     <dependency>
       <groupId>taglibs</groupId>
       <artifactId>standard</artifactId>
-      <version>1.1.2</version>
+      <version>${taglibs.version}</version>
       <scope>compile</scope>
     </dependency>
+    
+    <dependency>
+	    <groupId>com.zaxxer</groupId>
+	    <artifactId>HikariCP</artifactId>
+	    <version>${HikariCP.version}</version>
+	    <scope>compile</scope>
+	</dependency>
   
   </dependencies>
   
