--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 	<jstl.version>1.2</jstl.version>
 	<taglibs.version>1.1.2</taglibs.version>
 	<HikariCP.version>2.7.8</HikariCP.version>
+	<org.springframework.version>5.1.6.RELEASE</org.springframework.version>
   </properties>
   
   <dependencies>
@@ -78,6 +79,18 @@
 	    <artifactId>HikariCP</artifactId>
 	    <version>${HikariCP.version}</version>
 	    <scope>compile</scope>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-core</artifactId>
+	    <version>${org.springframework.version}</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-context</artifactId>
+	    <version>${org.springframework.version}</version>
 	</dependency>
   
   </dependencies>
