--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -6,8 +6,21 @@
     version="3.0">
     
     <listener>
-        <listener-class>com.excilys.cdb.config.DaoFactoryInitialization</listener-class>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>com.excilys.cdb.config.SpringConfiguration</param-value>
+    </context-param>
+    <context-param>
+        <param-name>contextClass</param-name>
+        <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
+    </context-param>
+    
+    <!-- <listener>
+        <listener-class>com.excilys.cdb.config.DaoFactoryInitialization</listener-class>
+    </listener> -->
     
     <servlet>
 		<servlet-name>Dashboard</servlet-name>
