--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
 	    <artifactId>spring-context</artifactId>
 	    <version>${org.springframework.version}</version>
 	</dependency>
+	
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-web</artifactId>
+	    <version>${org.springframework.version}</version>
+	</dependency>
   
   </dependencies>
   
