--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <junit-jupiter-engine.version>5.4.0</junit-jupiter-engine.version>
     <mysql-connector-java.version>8.0.15</mysql-connector-java.version>
     <log4j.version>1.2.17</log4j.version>
+    <spring-boot-starter-log4j.version>1.3.8.RELEASE</spring-boot-starter-log4j.version>
 	<mockito-all.version>1.8.4</mockito-all.version>
 	<maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
 	<maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
@@ -23,7 +24,7 @@
 	<jstl.version>1.2</jstl.version>
 	<taglibs.version>1.1.2</taglibs.version>
 	<HikariCP.version>2.7.8</HikariCP.version>
-	<org.springframework.version>5.1.6.RELEASE</org.springframework.version>
+	<springframework.version>5.1.6.RELEASE</springframework.version>
   </properties>
   
   <dependencies>
@@ -52,6 +53,12 @@
 	  <artifactId>log4j</artifactId>
 	  <version>${log4j.version}</version>
 	</dependency>
+	
+	<dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-log4j</artifactId>
+        <version>${spring-boot-starter-log4j.version}</version>
+    </dependency>
     
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -84,19 +91,32 @@
 	<dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-core</artifactId>
-	    <version>${org.springframework.version}</version>
+	    <version>${springframework.version}</version>
 	</dependency>
 	
 	<dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-context</artifactId>
-	    <version>${org.springframework.version}</version>
+	    <version>${springframework.version}</version>
 	</dependency>
 	
 	<dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-web</artifactId>
-	    <version>${org.springframework.version}</version>
+	    <version>${springframework.version}</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-jdbc</artifactId>
+	    <version>2.1.4.RELEASE</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-parent</artifactId>
+	    <version>2.1.4.RELEASE</version>
+	    <type>pom</type>
 	</dependency>
   
   </dependencies>
