--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 	<taglibs.version>1.1.2</taglibs.version>
 	<HikariCP.version>2.7.8</HikariCP.version>
 	<springframework.version>5.1.6.RELEASE</springframework.version>
+	<springboot.version>2.1.4.RELEASE</springboot.version>
   </properties>
   
   <dependencies>
@@ -96,7 +97,7 @@
 	<dependency>
 	    <groupId>org.springframework.boot</groupId>
 	    <artifactId>spring-boot-starter-jdbc</artifactId>
-	    <version>2.1.4.RELEASE</version>
+	    <version>${springboot.version}</version>
 	</dependency>
   
   </dependencies>
