--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
 	</dependency>
 	
 	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-jdbc</artifactId>
+	    <version>${springframework.version}</version>
+	</dependency>
+	
+	<dependency>
 	    <groupId>org.springframework.boot</groupId>
 	    <artifactId>spring-boot-starter-jdbc</artifactId>
 	    <version>${springboot.version}</version>
