--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,12 @@
 	
 	<dependency>
 	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-webmvc</artifactId>
+	    <version>${springframework.version}</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-jdbc</artifactId>
 	    <version>${springframework.version}</version>
 	</dependency>
