--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -21,6 +21,12 @@
 		<servlet-name>default</servlet-name>
 		<url-pattern>*.css</url-pattern>
 		<url-pattern>*.js</url-pattern>
+		<url-pattern>*.eot</url-pattern>
+		<url-pattern>*.svg</url-pattern>
+		<url-pattern>*.ttf</url-pattern>
+		<url-pattern>*.woff</url-pattern>
+		<url-pattern>*.otf</url-pattern>
+		<url-pattern>*.png</url-pattern>
 	</servlet-mapping>
 
 </web-app>
