--- a/pom.xml
+++ b/pom.xml
@@ -88,11 +88,11 @@
 	    <version>${springframework.version}</version>
 	</dependency>
 	
-	<dependency>
+	<!-- <dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-web</artifactId>
 	    <version>${springframework.version}</version>
-	</dependency>
+	</dependency> -->
 	
 	<dependency>
 	    <groupId>org.springframework</groupId>
@@ -111,6 +111,13 @@
 	    <artifactId>spring-boot-starter-jdbc</artifactId>
 	    <version>${springboot.version}</version>
 	</dependency>
+	
+	<dependency>
+	    <groupId>org.hibernate</groupId>
+	    <artifactId>hibernate-core</artifactId>
+	    <version>5.4.2.Final</version>
+	</dependency>
+	
   
   </dependencies>
   
