--- a/pom.xml
+++ b/pom.xml
@@ -1,40 +1,28 @@
-<project	xmlns="http://maven.apache.org/POM/4.0.0" 
-			xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  			xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.excilys.cdb</groupId>
-  <artifactId>computer-data-base</artifactId>
-  <packaging>jar</packaging>
+
+  <groupId>com.excilys</groupId>
+  <artifactId>computer-database</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>computer-data-base</name>
-  <url>http://maven.apache.org</url>
-  
+
+  <name>computer-database</name>
+  <!-- FIXME change it to the project's website -->
+  <url>http://www.example.com</url>
+	
+  <packaging>pom</packaging>
+
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
     <junit-jupiter-api.version>5.4.0</junit-jupiter-api.version>
     <junit-jupiter-engine.version>5.4.0</junit-jupiter-engine.version>
-    <mysql-connector-java.version>8.0.15</mysql-connector-java.version>
-    <log4j.version>1.2.17</log4j.version>
-    <spring-boot-starter-log4j.version>1.3.8.RELEASE</spring-boot-starter-log4j.version>
-	<mockito-all.version>1.8.4</mockito-all.version>
-	<maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
-	<maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
-	<javax.servlet-api.version>3.0.1</javax.servlet-api.version>
-	<jstl.version>1.2</jstl.version>
-	<taglibs.version>1.1.2</taglibs.version>
-	<HikariCP.version>2.7.8</HikariCP.version>
-	<springframework.version>5.1.6.RELEASE</springframework.version>
-	<springboot.version>2.1.4.RELEASE</springboot.version>
   </properties>
-  
+
   <dependencies>
-    <dependency>
-      <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <version>${mysql-connector-java.version}</version>
-    </dependency>
-    
+  
     <dependency>
 	  <groupId>org.junit.jupiter</groupId>
 	  <artifactId>junit-jupiter-engine</artifactId>
@@ -49,72 +37,8 @@
 	  <scope>test</scope>
 	</dependency>
 	
-	<dependency>
-      <groupId>log4j</groupId>
-	  <artifactId>log4j</artifactId>
-	  <version>${log4j.version}</version>
-	</dependency>
-	
-	<dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-log4j</artifactId>
-        <version>${spring-boot-starter-log4j.version}</version>
-    </dependency>
-    
-    <dependency>
-      	<groupId>javax.servlet</groupId>
-      	<artifactId>javax.servlet-api</artifactId>
-      	<version>${javax.servlet-api.version}</version>
-      	<scope>provided</scope>
-	</dependency>
-    
-    <dependency>
-      <groupId>jstl</groupId>
-  	  <artifactId>jstl</artifactId>
-      <version>${jstl.version}</version>
-      <scope>compile</scope>
-    </dependency>
-    
-    <dependency>
-      <groupId>taglibs</groupId>
-      <artifactId>standard</artifactId>
-      <version>${taglibs.version}</version>
-      <scope>compile</scope>
-    </dependency>
-	
-	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-context</artifactId>
-	    <version>${springframework.version}</version>
-	</dependency>
-	
-	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-webmvc</artifactId>
-	    <version>${springframework.version}</version>
-	</dependency>
-	
-	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-jdbc</artifactId>
-	    <version>${springframework.version}</version>
-	</dependency>
-	
-	<dependency>
-	    <groupId>org.springframework.boot</groupId>
-	    <artifactId>spring-boot-starter-jdbc</artifactId>
-	    <version>${springboot.version}</version>
-	</dependency>
-	
-	<dependency>
-	    <groupId>org.hibernate</groupId>
-	    <artifactId>hibernate-core</artifactId>
-	    <version>5.4.2.Final</version>
-	</dependency>
-	
-  
   </dependencies>
-  
+
   <build>
     <pluginManagement>
       <plugins>
@@ -127,18 +51,12 @@
     </pluginManagement>
   </build>
   
-  <reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>${maven-checkstyle-plugin.version}</version>
-        <configuration>
-          <configLocation>src/main/resources/checkstyle/checkstyle.xml</configLocation>
-          <suppressionsLocation>src/main/resources/checkstyle/suppressions.xml</suppressionsLocation>
-        </configuration>
-      </plugin>
-    </plugins>
-  </reporting>
-  
+  <modules>
+    <module>core</module>
+    <module>persistence</module>
+    <module>service</module>
+    <module>binding</module>
+    <module>webapp</module>
+    <module>console</module>
+  </modules>
 </project>
