--- a/service/pom.xml
+++ b/service/pom.xml
@@ -19,6 +19,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <springframework.version>5.1.6.RELEASE</springframework.version>
+    <springframework-security.version>5.1.5.RELEASE</springframework-security.version>
   </properties>
 
   <dependencies>
@@ -27,6 +28,12 @@
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-context</artifactId>
 	    <version>${springframework.version}</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-core</artifactId>
+	    <version>${springframework-security.version}</version>
 	</dependency>
 	
 	<dependency>
