--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -21,6 +21,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <springframework.version>5.1.6.RELEASE</springframework.version>
+    <springframework-security.version>5.1.5.RELEASE</springframework-security.version>
     <javax.servlet-api.version>3.0.1</javax.servlet-api.version>
     <jstl.version>1.2</jstl.version>
     <taglibs.version>1.1.2</taglibs.version>
@@ -35,6 +36,12 @@
 	    <version>${springframework.version}</version>
 	</dependency>
 	
+	<dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-core</artifactId>
+	    <version>${springframework-security.version}</version>
+	</dependency>
+		
 	<dependency>
         <groupId>com.excilys</groupId>
         <artifactId>core</artifactId>
