--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -39,12 +39,18 @@
 	<dependency>
 	    <groupId>org.springframework.security</groupId>
 	    <artifactId>spring-security-config</artifactId>
-	    <version>5.0.0.RELEASE</version>
+	    <version>${springframework-security.version}</version>
 	  </dependency>
 	
 	<dependency>
 	    <groupId>org.springframework.security</groupId>
 	    <artifactId>spring-security-web</artifactId>
+	    <version>${springframework-security.version}</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-taglibs</artifactId>
 	    <version>${springframework-security.version}</version>
 	</dependency>
 		
